welcome.lessons.welcome.bat.bool2.SortaSum.scala.error
sortaSum:4: error: '(' expected but identifier found.
if twenty(x) {return 20}
   ^sortaSum:11: error: illegal start of simple expression
}
^