welcome.lessons.welcome.bat.bool2.SortaSum.scala.code
def sortaSum(a:Int, b:Int):Int = {
var x = a + b

if twenty(x) {return 20}
else {return x}





}


def twenty (a:Int):Boolean=
{(a >=10 && a <= 19)}